--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <div class="flex flex-wrap overflow-hidden sm:-mx-2">
 
   <div class="w-1/2 overflow-hidden sm:my-2 sm:px-2 lg:w-1/3 xl:w-1/4">
-    <!-- Column Content -->
+    tes
   </div>
 
   <div class="w-1/2 overflow-hidden sm:my-2 sm:px-2 lg:w-1/3 xl:w-1/4">
